# AI-Resume-Critiquer-M2

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  __init__.py  ai_providers.py  app.py  cleanup.py  config.py  pyproject.toml  requirements.txt  resume_analysis.db  run.py  validators.py
